# smart-clock2

./: Cargo.toml  README.md  clock_ctrl.py  openocd.cfg  openocd.gdb  r.sh
.cargo/: config
src/: main.rs  mappings.rs
